// スライム箱庭ゲーム - Firestoreスキーマ設計
// dbdiagram.io にそのまま貼り付けて利用可能

Table worlds {
  id           varchar   [pk, note: 'ワールドの一意ID']
  name         varchar   [not null, note: 'ワールド名']
  currentTurn  int       [not null, default: 0, note: '現在のターン番号']
  nextTurnAt   timestamp [not null, note: '次のターン処理が実行される日時']
  turnIntervalSec int    [not null, default: 3600, note: 'ターン間隔（秒）']
  createdAt    timestamp [not null, note: 'ワールド作成日時']
}

Table users {
  uid          varchar   [pk, note: 'Firebase AuthのユーザーUID']
  displayName  varchar   [null, note: '表示名']
  email        varchar   [null, note: 'メールアドレス']
  mapId        varchar   [null, note: '割り当てられたマップID（Auth Trigger後に設定）']
  createdAt    timestamp [not null, note: 'ユーザー登録日時']
  updatedAt    timestamp [not null, note: '最終更新日時']
}

Table maps {
  id           varchar   [pk, note: 'マップの一意ID']
  worldId      varchar   [not null, note: '所属するワールドID']
  ownerUid     varchar   [null, note: 'マップオーナーのUID（nullの場合は公共マップ）']
  name         varchar   [not null, note: 'マップ名']
  width        int       [not null, note: 'マップの横幅（タイル数）']
  height       int       [not null, note: 'マップの縦幅（タイル数）']
  createdAt    timestamp [not null, note: 'マップ作成日時']
}

Table tiles {
  id           varchar   [pk, note: 'タイルの一意ID（例: mapId-x-y）']
  mapId        varchar   [not null, note: '所属するマップID']
  x            int       [not null, note: 'タイルのX座標']
  y            int       [not null, note: 'タイルのY座標']
  attr_fire    float     [not null, default: 0.0, note: '火属性強度（0.0〜1.0）']
  attr_water   float     [not null, default: 0.0, note: '水属性強度（0.0〜1.0）']
  attr_earth   float     [not null, default: 0.0, note: '土属性強度（0.0〜1.0）']
  attr_wind    float     [not null, default: 0.0, note: '風属性強度（0.0〜1.0）']
}

Table slime_species {
  id                 varchar   [pk, note: '種族の一意ID']
  name               varchar   [not null, note: '種族名']
  description        text      [not null, note: '種族の説明文']
  base_hp            int       [not null, note: '基本HP']
  base_atk           int       [not null, note: '基本ATK']
  base_def           int       [not null, note: '基本DEF']
  base_spd           int       [not null, note: '基本SPD']
  base_exp           int       [not null, default: 0, note: '基本EXP']
  base_hunger        int       [not null, default: 80, note: '初期満腹度（0〜100）']
  evolutionConditions json      [null, note: '進化条件の配列（JSON）']
}

Table slimes {
  id               varchar   [pk, note: 'スライムの一意ID']
  ownerUid         varchar   [null, note: 'オーナーUID（nullは野生スライム）']
  mapId            varchar   [not null, note: '所属するマップID']
  worldId          varchar   [not null, note: '所属するワールドID']
  speciesId        varchar   [not null, note: '種族ID（slime_speciesを参照）']
  tileX            int       [not null, note: '現在位置のX座標']
  tileY            int       [not null, note: '現在位置のY座標']
  name             varchar   [not null, note: 'スライムの名前']
  stat_hp          int       [not null, note: '現在のHP']
  stat_atk         int       [not null, note: '現在のATK']
  stat_def         int       [not null, note: '現在のDEF']
  stat_spd         int       [not null, note: '現在のSPD']
  stat_exp         int       [not null, default: 0, note: '累計EXP']
  stat_hunger      int       [not null, default: 80, note: '満腹度（0〜100）']
  rv_fire          float     [not null, default: 0.0, note: '環境由来: 火属性種族値']
  rv_water         float     [not null, default: 0.0, note: '環境由来: 水属性種族値']
  rv_earth         float     [not null, default: 0.0, note: '環境由来: 土属性種族値']
  rv_wind          float     [not null, default: 0.0, note: '環境由来: 風属性種族値']
  rv_slime         float     [not null, default: 0.0, note: '食料由来: スライム系種族値']
  rv_plant         float     [not null, default: 0.0, note: '食料由来: 植物系種族値']
  rv_human         float     [not null, default: 0.0, note: '食料由来: 人間系種族値']
  rv_beast         float     [not null, default: 0.0, note: '食料由来: 獣系種族値']
  rv_spirit        float     [not null, default: 0.0, note: '食料由来: 霊系種族値']
  rv_fish          float     [not null, default: 0.0, note: '食料由来: 魚系種族値']
  isWild           boolean   [not null, default: false, note: '野生スライムかどうか']
  createdAt        timestamp [not null, note: 'スライム作成日時']
  updatedAt        timestamp [not null, note: '最終更新日時']
}

Table skill_definitions {
  id           varchar   [pk, note: 'スキル定義の一意ID']
  name         varchar   [not null, note: 'スキル名']
  description  text      [not null, note: 'スキルの説明文']
  effectType   varchar   [not null, note: '効果タイプ（stat_boost / action_bonus / cooking / other）']
  effectData   json      [not null, note: '効果の詳細データ（JSON）']
}

Table slime_skills {
  id                  varchar   [pk, note: 'スライムスキルの一意ID']
  slimeId             varchar   [not null, note: 'スキルを持つスライムのID']
  skillDefinitionId   varchar   [not null, note: 'スキル定義ID（skill_definitionsを参照）']
  acquiredAt          timestamp [not null, note: 'スキル習得日時']
}

Table foods {
  id              varchar   [pk, note: '食料の一意ID']
  name            varchar   [not null, note: '食料名']
  description     text      [not null, note: '食料の説明文']
  category        varchar   [not null, note: 'カテゴリ（slime / plant / human / beast / spirit / fish）']
  stat_hp         int       [null, note: 'HP増減量（nullは変化なし）']
  stat_atk        int       [null, note: 'ATK増減量（nullは変化なし）']
  stat_def        int       [null, note: 'DEF増減量（nullは変化なし）']
  stat_spd        int       [null, note: 'SPD増減量（nullは変化なし）']
  stat_exp        int       [null, note: 'EXP増減量（nullは変化なし）']
  stat_hunger     int       [null, note: '満腹度増減量（nullは変化なし）']
  rv_fire         float     [null, note: '火属性種族値増減量']
  rv_water        float     [null, note: '水属性種族値増減量']
  rv_earth        float     [null, note: '土属性種族値増減量']
  rv_wind         float     [null, note: '風属性種族値増減量']
  rv_slime        float     [null, note: 'スライム系種族値増減量']
  rv_plant        float     [null, note: '植物系種族値増減量']
  rv_human        float     [null, note: '人間系種族値増減量']
  rv_beast        float     [null, note: '獣系種族値増減量']
  rv_spirit       float     [null, note: '霊系種族値増減量']
  rv_fish         float     [null, note: '魚系種族値増減量']
  skillGrantId    varchar   [null, note: 'スキル付与があるスキル定義ID（nullはスキル付与なし）']
  skillGrantProb  float     [not null, default: 0.0, note: 'スキル付与確率（0.0〜1.0）']
}

Table action_reservations {
  id           varchar   [pk, note: '行動予約の一意ID']
  slimeId      varchar   [not null, note: '行動するスライムのID']
  ownerUid     varchar   [not null, note: '行動を予約したユーザーUID']
  worldId      varchar   [not null, note: '所属するワールドID']
  turnNumber   int       [not null, note: '行動を実行するターン番号']
  actionType   varchar   [not null, note: '行動種別（eat / move / rest / battle）']
  actionData   json      [not null, note: '行動の詳細データ（JSON）']
  status       varchar   [not null, default: 'pending', note: '状態（pending / executed / cancelled）']
  createdAt    timestamp [not null, note: '予約作成日時']
  executedAt   timestamp [null, note: '実行日時（未実行の場合はnull）']
}

Table turn_logs {
  id           varchar   [pk, note: 'ターンログの一意ID']
  worldId      varchar   [not null, note: '所属するワールドID']
  slimeId      varchar   [not null, note: 'イベントが発生したスライムのID']
  turnNumber   int       [not null, note: 'イベントが発生したターン番号']
  eventType    varchar   [not null, note: 'イベント種別（eat / move / rest / battle_win / battle_lose / evolve / split / merge / autonomous / hunger_decrease）']
  eventData    json      [not null, note: 'イベントの詳細データ（JSON）']
  processedAt  timestamp [not null, note: 'ターン処理日時']
}

// ===== リレーション定義 =====

// maps → worlds  [note: 'マップはワールドに所属する']
Ref: maps.worldId > worlds.id

// users → maps [note: 'ユーザーは1つのマップを所有する']
Ref: users.mapId > maps.id

// maps → users [note: 'マップはユーザーが所有する（nullは公共）']
Ref: maps.ownerUid > users.uid

// tiles → maps [note: 'タイルはマップに所属する']
Ref: tiles.mapId > maps.id

// slimes → users [note: 'スライムはユーザーが所有する（nullは野生）']
Ref: slimes.ownerUid > users.uid

// slimes → maps [note: 'スライムはマップに配置される']
Ref: slimes.mapId > maps.id

// slimes → worlds [note: 'スライムはワールドに属する']
Ref: slimes.worldId > worlds.id

// slimes → slime_species [note: 'スライムは種族定義を持つ']
Ref: slimes.speciesId > slime_species.id

// slime_skills → slimes [note: 'スライムスキルはスライムに紐づく']
Ref: slime_skills.slimeId > slimes.id

// slime_skills → skill_definitions [note: 'スライムスキルはスキル定義を参照する']
Ref: slime_skills.skillDefinitionId > skill_definitions.id

// foods → skill_definitions [note: '食料はスキル付与先のスキル定義を参照する（null許容）']
Ref: foods.skillGrantId > skill_definitions.id

// action_reservations → slimes [note: '行動予約はスライムに紐づく']
Ref: action_reservations.slimeId > slimes.id

// action_reservations → users [note: '行動予約はユーザーが作成する']
Ref: action_reservations.ownerUid > users.uid

// action_reservations → worlds [note: '行動予約はワールドに属する']
Ref: action_reservations.worldId > worlds.id

// turn_logs → worlds [note: 'ターンログはワールドに属する']
Ref: turn_logs.worldId > worlds.id

// turn_logs → slimes [note: 'ターンログはスライムに紐づく']
Ref: turn_logs.slimeId > slimes.id
